[tool.poetry]
name = "repl_python3_CriticalAssuredModem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telepot = "^12.7"
selenium = "^3.141.0"
geckodriver-autoinstaller = "^0.1.0"
unicode = "^2.8"
emoji = "^1.4.2"
pytz = "^2021.1"
Flask = "^2.0.1"
gspread = "^4.0.1"
oauth2client = "^4.1.3"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
